--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
-    "react-icons": "^5.4.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.3",
     "react-swiper": "^0.1.5",
+    "recharts": "^3.0.2",
     "swiper": "^11.2.6"
   },
   "devDependencies": {
